<resources>
    <string name="app_name">Undo</string>
    <string name="action_settings">Settings</string>
    <string name="undo_label">Undo</string>
    <string name="redo_label">Redo</string>
    <string name="thickness_label">Thickness</string>
    <string name="color_label">Color</string>
    <string name="undo_desc">Undo an action</string>
    <string name="redo_desc">Redo an action</string>
    <string name="red_desc">Select red</string>
    <string name="green_desc">Select green</string>
    <string name="blue_desc">Select blue</string>
    <string name="thickness_desc">Select a line thickness</string>
    <string name="color_desc">Select a color</string>
    <string name="thick_desc">Select thick stroke</string>
    <string name="med_desc">Select medium stroke</string>
    <string name="thin_desc">Select thin stroke</string>
    <string name="thinnest_desc">Select thinnest stroke</string>
    <string name="fully_opaque">Select most opaque stroke</string>
    <string name="fully_opaque_number">1f</string>
    <string name="medium_opaque">Select medium opaque stroke</string>
    <string name="medium_opaque_number">0.5f</string>
    <string name="transparent">Select transparent stroke</string>
    <string name="transparent_number">0.1f</string>
    <string name="opacity_desc">Select a line opacity</string>
    <string name="opacity_label">Opacity</string>
    <string name="edit_button">edit</string>
    <string name="edit_button_desc">edit mode</string>
    <string name="edit_mode">edit mode</string>

    <string name="erase">erase</string>
    <string name="clear">clear</string>
    <string name="triangle">Triangle</string>
    <string name="rect">\u2395</string>
    <string name="rect_desc">draw a rectangle</string>
    <string name="oval">\u2d54</string>
    <string name="oval_desc">draw an oval</string>
    <string name="line">\u2014</string>
    <string name="line_desc">draw a line</string>
    <string name="arrow">\u2197</string>
    <string name="arrow_desc">draw an arrow</string>
    <string name="stroke">\u1a15</string>៚
    <string name="stroke_desc">draw a stroke</string>
    <string name="dash">---</string>
    <string name="pen">១</string>
    <string name="action_fab_desc">select an action</string>
    <string name="fab_action">actions</string>
    <string name="shape_fab_desc">select a shape</string>
    <string name="shapes">shapes</string>
    <string name="number">\u2115</string>
    <string name="number_desc">draw a line of number</string>
    <string name="letter">\u2112</string>
    <string name="letter_desc">draw a line of letters</string>
    <string name="test_action">Test</string>
</resources>
